# pyQt5Test

./: end.py  main.py  name.py  pyproject.toml  qttest.ui  redacted.py  test1.ui  test2.ui
pic/: s12_all.pbm  s26_all.pbm  s27_all.pbm
s12/: s26_template_1.pbm  s26_template_2.pbm  s27_template_1.pbm  s27_template_2.pbm
